# MVIRP

./: CMakeLists.txt  README.md  SolverParameters.json
Deploy/: README.md
Libs/: CMakeLists.txt
Libs/CVRP/: CMakeLists.txt  CrossOver.cpp  CrossOver.h  CvrpParameters.cpp  CvrpParameters.h  CvrpTypeDef.cpp  CvrpTypeDef.h  Framework.cpp  Framework.h  Individual.cpp  Individual.h  LocalSearch.h  NagataBase.cpp  NagataBase.h  NagataLocalSearch.cpp  NagataLocalSearch.h  PathRelinking.cpp  PathRelinking.h  Population.cpp  Population.h  ReadMe.md  Repair.cpp  Repair.h
Libs/Delaunator/: CMakeLists.txt  delaunator.cpp  delaunator.h
Libs/Gurobi/: CMakeLists.txt  Flag.h  Gurobi.cpp  Gurobi.h  Preprocessor.h  Typedef.h
Libs/lemon/: arg_parser.h  config.h  core.h  fractional_matching.h  lp_base.h  random.h  time_measure.h
Libs/lemon/bits/: variant.h  vector_map.h  windows.cc
Source/: CMakeLists.txt  CmdLineParser.h  CvrpCaller.cpp  CvrpCaller.h  GrbCaller.h  Main.cpp  NetflowCaller.cpp  NetflowCaller.h  Parameters.cpp  Parameters.h  Solution.cpp  Solution.h  Solver.cpp  Solver.h  SolverAdjusting.cpp  SolverFinding.cpp  SolverHasher.cpp  SolverRefining.cpp  TypeDef.cpp  TypeDef.h  Untils.h  Utils.cpp  netflowtakes.txt
Test/: CMakeLists.txt
Test/Deploy/: README.md
Test/Source/: CMakeLists.txt  pch.cpp  pch.h  test.cpp  testStage1.cpp  testStage2.cpp  testStage3.cpp
Test/TestBuildwithVS2022/: TestBuildwithVS2022.sln
Test/TestBuildwithVS2022/Test1/: Test1.vcxproj  Test1.vcxproj.filters
buildwithVS2022/: buildwithVS2022.sln
buildwithVS2022/Solver/: Solver.vcxproj  Solver.vcxproj.filters
